WIP: Reimplemented the saving of user themes. Now uses correct 2.0 websocket call. Theme is not automatically saved though. There is now a new option at the bottom of the theme picker menu, that allows users to save the currently selected theme. This way users can try different themes and will need to explicitly choose to save a theme they like. Also small cosmetic enhancement to line charts. Event rects are now visible.

--- a/src/assets/styles/charts.css
+++ b/src/assets/styles/charts.css
@@ -161,6 +161,16 @@ div.c3.area-spline .c3-chart-line .c3-lines path.c3-line{
   stroke-width:0;
 }
 
+/* Event Rects */
+g.c3-event-rects{
+  fill: rgba(0,0,0,0);
+  stroke: rgba(128,128,128,0.0325);
+}
+
+g.c3-event-rects rect.c3-event-rect:nth-child(odd){
+  fill: rgba(128,128,128,0.025) !important;
+}
+
 /* SUBCHARTS */
 g.c3-brush + g{
   opacity:0 !important;
